--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -60,207 +60,233 @@
             <span>Devices</span>
           </li>
         </a>
-        <a
-          *ngIf="haveBot"
-          [routerLink]="'/chatbot/analytics'"
-          (click)="setCurrentSubItem('Analytics')"
+        <div
+          (mouseenter)="onMouseEnter('Chatbots')"
+          (mouseleave)="onMouseLeave()"
         >
-          <li
-            (click)="setCurrentItem('Chatbots')"
-            [class.active]="currentItem === 'Chatbots'"
-            class="menu_item"
+          <a
+            *ngIf="haveBot"
+            [routerLink]="'/chatbot/analytics'"
+            (click)="setCurrentSubItem('Analytics')"
           >
-            <div>
-              <img src="../../../assets/chatboticon.png" />
-              <img src="../../../assets/chatboticonw.png" />
-            </div>
-            <span>Chatbots</span>
-          </li>
-        </a>
+            <li
+              (click)="setCurrentItem('Chatbots')"
+              [class.active]="currentItem === 'Chatbots'"
+              class="menu_item"
+            >
+              <div>
+                <img src="../../../assets/chatboticon.png" />
+                <img src="../../../assets/chatboticonw.png" />
+              </div>
+              <span>Chatbots</span>
+            </li>
+          </a>
 
-        <ul *ngIf="currentItem === 'Chatbots'" class="sub_menu">
-          <a [routerLink]="'/chatbot/analytics'">
-            <li
-              (click)="setCurrentSubItem('Analytics')"
-              [class.active]="currentSubItem === 'Analytics'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/analytics.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Analytics</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/chat-flow'">
-            <li
-              (click)="setCurrentSubItem('Chat')"
-              [class.active]="currentSubItem === 'Chat'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/chat-flow.png"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Chat Flow</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/QR-code'">
-            <li
-              (click)="setCurrentSubItem('qrcode')"
-              [class.active]="currentSubItem === 'qrcode'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/qricon.png"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>QR Code</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/bookings'">
-            <li
-              (click)="setCurrentSubItem('Bookings')"
-              [class.active]="currentSubItem === 'Bookings'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/bookings.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Bookings</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/interactions'">
-            <li
-              (click)="setCurrentSubItem('Interactions')"
-              [class.active]="currentSubItem === 'Interactions'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/bookings.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Interactions</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/customers'">
-            <li
-              (click)="setCurrentSubItem('Customers')"
-              [class.active]="currentSubItem === 'Customers'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/customers.png"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Customers</span>
-            </li>
-          </a>
-          <a [routerLink]="'/chatbot/bot-settings'">
-            <li
-              (click)="setCurrentSubItem('Bot Settings')"
-              [class.active]="currentSubItem === 'Bot Settings'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/bot-settings.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Bot Settings</span>
-            </li>
-          </a>
-        </ul>
-
-        <a [routerLink]="'/broadcast-sms'" (click)="setCurrentSubItem('SMS')">
-          <li
-            (click)="setCurrentItem('Broadcast')"
-            [class.active]="currentItem === 'Broadcast'"
-            class="menu_item"
+          <ul
+            *ngIf="hoveredItem === 'Chatbots' || currentItem === 'Chatbots'"
+            class="sub_menu"
           >
-            <div>
-              <img src="../../../assets/broadcasticon.png" />
-              <img src="../../../assets/broadcasticonw.png" />
-            </div>
-            <span>Broadcast</span>
-          </li>
-        </a>
-        <ul *ngIf="currentItem === 'Broadcast'" class="sub_menu">
-          <a [routerLink]="'/broadcast-sms'">
+            <a [routerLink]="'/chatbot/analytics'">
+              <li
+                (click)="setCurrentSubItem('Analytics')"
+                [class.active]="currentSubItem === 'Analytics'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/analytics.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Analytics</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/chat-flow'">
+              <li
+                (click)="setCurrentSubItem('Chat')"
+                [class.active]="currentSubItem === 'Chat'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/chat-flow.png"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Chat Flow</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/QR-code'">
+              <li
+                (click)="setCurrentSubItem('qrcode')"
+                [class.active]="currentSubItem === 'qrcode'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/qricon.png"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>QR Code</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/bookings'">
+              <li
+                (click)="setCurrentSubItem('Bookings')"
+                [class.active]="currentSubItem === 'Bookings'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/bookings.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Bookings</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/interactions'">
+              <li
+                (click)="setCurrentSubItem('Interactions')"
+                [class.active]="currentSubItem === 'Interactions'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/bookings.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Interactions</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/customers'">
+              <li
+                (click)="setCurrentSubItem('Customers')"
+                [class.active]="currentSubItem === 'Customers'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/customers.png"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Customers</span>
+              </li>
+            </a>
+            <a [routerLink]="'/chatbot/bot-settings'">
+              <li
+                (click)="setCurrentSubItem('Bot Settings')"
+                [class.active]="currentSubItem === 'Bot Settings'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/bot-settings.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Bot Settings</span>
+              </li>
+            </a>
+          </ul>
+        </div>
+
+        <div
+          (mouseenter)="onMouseEnter('Broadcast')"
+          (mouseleave)="onMouseLeave()"
+        >
+          <a [routerLink]="'/broadcast-sms'" (click)="setCurrentSubItem('SMS')">
             <li
-              (click)="setCurrentSubItem('SMS')"
-              [class.active]="currentSubItem === 'SMS'"
-              class="sub_menu_item"
+              (click)="setCurrentItem('Broadcast')"
+              [class.active]="currentItem === 'Broadcast'"
+              class="menu_item"
             >
-              <img
-                src="../../../assets/icons/broadcast-sms.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>SMS</span>
+              <div>
+                <img src="../../../assets/broadcasticon.png" />
+                <img src="../../../assets/broadcasticonw.png" />
+              </div>
+              <span>Broadcast</span>
             </li>
           </a>
-          <a [routerLink]="'/broadcast-whatsapp'">
-            <li
-              (click)="setCurrentSubItem('WhatsApp')"
-              [class.active]="currentSubItem === 'WhatsApp'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/icons/broadcast-w.svg"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>WhatsApp</span>
-            </li>
-          </a>
-        </ul>
+          <ul
+            *ngIf="hoveredItem === 'Broadcast' || currentItem === 'Broadcast'"
+            class="sub_menu"
+          >
+            <a [routerLink]="'/broadcast-sms'">
+              <li
+                (click)="setCurrentSubItem('SMS')"
+                [class.active]="currentSubItem === 'SMS'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/broadcast-sms.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>SMS</span>
+              </li>
+            </a>
+            <a [routerLink]="'/broadcast-whatsapp'">
+              <li
+                (click)="setCurrentSubItem('WhatsApp')"
+                [class.active]="currentSubItem === 'WhatsApp'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/icons/broadcast-w.svg"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>WhatsApp</span>
+              </li>
+            </a>
+          </ul>
+        </div>
       </ul>
 
       <ul class="sidebar-borders menu">
-        <a
-          [routerLink]="'/review/review-page'"
-          (click)="setCurrentSubItem('Review Page')"
+        <div
+          (mouseenter)="onMouseEnter('Review Page')"
+          (mouseleave)="onMouseLeave()"
         >
-          <li
-            (click)="setCurrentItem('Review Page')"
-            [class.active]="currentItem === 'Review Page'"
-            class="menu_item"
+          <a
+            [routerLink]="'/review/review-page'"
+            (click)="setCurrentSubItem('Review Page')"
           >
-            <div>
-              <img src="../../../assets/review-img-b.png" />
-              <img src="../../../assets/review-img-w.png" />
-            </div>
-            <span>Review</span>
-          </li>
-        </a>
+            <li
+              (click)="setCurrentItem('Review Page')"
+              [class.active]="currentItem === 'Review Page'"
+              class="menu_item"
+            >
+              <div>
+                <img src="../../../assets/review-img-b.png" />
+                <img src="../../../assets/review-img-w.png" />
+              </div>
+              <span>Review</span>
+            </li>
+          </a>
 
-        <ul *ngIf="currentItem === 'Review Page'" class="sub_menu">
-          <a [routerLink]="'/review/review-page'">
-            <li
-              (click)="setCurrentSubItem('Review Page')"
-              [class.active]="currentSubItem === 'Review Page'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/review-1.png"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>Review Page</span>
-            </li>
-          </a>
-          <a [routerLink]="'/review/my-reviews'">
-            <li
-              (click)="setCurrentSubItem('My Reviews')"
-              [class.active]="currentSubItem === 'My Reviews'"
-              class="sub_menu_item"
-            >
-              <img
-                src="../../../assets/review-2.png"
-                style="height: 20px; width: 20px; object-fit: contain"
-              />
-              <span>My Reviews</span>
-            </li>
-          </a>
-        </ul>
+          <ul
+            *ngIf="
+              hoveredItem === 'Review Page' || currentItem === 'Review Page'
+            "
+            class="sub_menu"
+          >
+            <a [routerLink]="'/review/review-page'">
+              <li
+                (click)="setCurrentSubItem('Review Page')"
+                [class.active]="currentSubItem === 'Review Page'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/review-1.png"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>Review Page</span>
+              </li>
+            </a>
+            <a [routerLink]="'/review/my-reviews'">
+              <li
+                (click)="setCurrentSubItem('My Reviews')"
+                [class.active]="currentSubItem === 'My Reviews'"
+                class="sub_menu_item"
+              >
+                <img
+                  src="../../../assets/review-2.png"
+                  style="height: 20px; width: 20px; object-fit: contain"
+                />
+                <span>My Reviews</span>
+              </li>
+            </a>
+          </ul>
+        </div>
       </ul>
 
       <ul class="sidebar-borders menu">
