--- a/src/app/screens/qr-page/qr-page.component.html
+++ b/src/app/screens/qr-page/qr-page.component.html
@@ -4437,7 +4437,10 @@
                     <input
                       type="checkbox"
                       [checked]="item.status === 'active'"
-                      (change)="item.status = !item.status"
+                      (change)="
+                        item.status =
+                          item.status === 'active' ? 'inactive' : 'active'
+                      "
                     />
                     <span class="slider"></span>
                   </label>
