--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -67,8 +67,8 @@
             class="menu_item"
           >
             <div>
-              <img src="../../../assets/deviceicon.png" />
-              <img src="../../../assets/deviceiconw.png" />
+              <img src="../../../assets/messages-white.png" />
+              <img src="../../../assets/messages.png" />
             </div>
             <span>Chats</span>
           </li>
