--- a/src/app/screens/chats/chats.component.css
+++ b/src/app/screens/chats/chats.component.css
@@ -6,15 +6,17 @@ main {
 main > div {
   display: flex;
   border-radius: 15px;
-  box-shadow: 0 0 10px lightgrey;
   height: 100%;
-  overflow: hidden;
+  gap: 10px;
 }
 
 .contacts {
   width: 35%;
   height: 100%;
   border-right: 1px solid lightgrey;
+  box-shadow: 0 0 10px lightgray;
+  border-radius: 12px;
+  padding: 0 10px;
 }
 
 .chats-con {
@@ -26,6 +28,7 @@ main > div {
   gap: 10px;
   overflow: scroll;
   padding: 10px;
+  padding-bottom: 20px;
 }
 
 .devices {
@@ -34,7 +37,7 @@ main > div {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 10px 0;
   position: relative;
 
   /* justify-content: center; */
@@ -42,10 +45,13 @@ main > div {
 
 .device-name-con {
   background-image: url("../../../assets/banner-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 20px;
   width: 100%;
   height: 100%;
   padding: 10px;
@@ -66,15 +72,20 @@ main > div {
 .devices-drop-down {
   position: absolute;
   min-width: fit-content;
-  max-height: 100px;
   width: 100%;
   top: 100px;
   left: 0;
   border: 1px solid lightgrey;
   z-index: 11;
-  box-shadow: 0 0 10px lightgrey;
-  background: white;
-  overflow: scroll;
+  box-shadow: 0 4px 10px -2px lightgrey;
+
+  background: rgb(248, 252, 248);
+  overflow: hidden;
+}
+
+.devices-drop-down,
+.devices-drop-down * {
+  transition: all 0.3s ease-in-out;
 }
 
 .devices-drop-down > div {
@@ -121,6 +132,7 @@ main > div {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  position: relative;
 }
 
 .incoming {
@@ -132,4 +144,39 @@ main > div {
 .outgoing {
   align-self: flex-end;
   background-color: #dcf8c6;
+}
+
+.loader {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid lightgray;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 20px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.badge {
+  background: #25d366;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 8px;
+  display: inline-block;
+  height: 13px;
+  width: 13px;
+  font-size: 12px;
+  right: 10px;
+  top: 8px;
+  min-width: 20px;
+  text-align: center;
+  font-weight: bold;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
