Chat button removed

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -60,7 +60,7 @@
             <span>Devices</span>
           </li>
         </a>
-        <a [routerLink]="'/chats'">
+        <!-- <a [routerLink]="'/chats'">
           <li
             (click)="setCurrentItem('Chats')"
             [class.active]="currentItem === 'Chats'"
@@ -72,7 +72,7 @@
             </div>
             <span>Chats</span>
           </li>
-        </a>
+        </a> -->
         <div
           (mouseenter)="onMouseEnter('Chatbots')"
           (mouseleave)="onMouseLeave()"
