--- a/src/app/screens/chats/chats.component.css
+++ b/src/app/screens/chats/chats.component.css
@@ -25,7 +25,7 @@ main > div {
   background-image: url("../../../assets/whatsapp-bg.jpg");
   display: flex;
   flex-direction: column-reverse;
-  gap: 10px;
+  gap: 20px;
   overflow: scroll;
   padding: 10px;
   padding-bottom: 20px;
@@ -38,7 +38,10 @@ main > div {
   align-items: center;
   justify-content: center;
   padding: 10px 0;
-  position: relative;
+  position: sticky;
+  top: 0;
+  background: white;
+  width: 100%;
 
   /* justify-content: center; */
 }
