--- a/src/app/screens/bookings/bookings.component.html
+++ b/src/app/screens/bookings/bookings.component.html
@@ -156,7 +156,7 @@
           <div class="th_item">
             {{ booking.vehicle_type }}
           </div>
-          <div class="th_item">
+          <div class="th_item" style="color: green">
             {{ booking.estimated_fare }}
           </div>
           <div class="th_item">
