--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -80,6 +80,7 @@
 }
 
 .right {
+  width: 276px;
   display: flex;
   align-items: center;
   border-radius: 30px;
@@ -102,6 +103,37 @@
   border-radius: 30px 30px 0 0;
 }
 
+.right:hover .role {
+  display: flex;
+}
+
+.right:hover .user-details {
+  display: none;
+}
+
+.user-details {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.user-details span {
+  font-size: 14px;
+  color: grey;
+  font-family: Nunito;
+  font-weight: 700;
+}
+
+.user-details * {
+  margin-bottom: 0;
+}
+
+.user-details h2 {
+  font-size: 16px;
+  color: var(--dark-color, #181818);
+  font-family: Nunito;
+  font-weight: 700;
+}
 .dp h5 {
   color: var(--dark-color, #181818);
   font-family: Nunito;
