--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -1,4 +1,221 @@
 <div class="container-own">
+  <app-modal *ngIf="showAddUserModal">
+    <div
+      style="display: flex; padding: 25px; flex-direction: column; gap: 20px"
+    >
+      <div style="border-bottom: 1px solid gray">
+        <h4
+          style="
+            color: #000;
+            font-family: 'DM Sans';
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 42px; /* 123.529% */
+            letter-spacing: -0.68px;
+            margin-bottom: 5px;
+          "
+        >
+          Invite New User
+        </h4>
+        <p
+          style="
+            color: #707eae;
+            font-family: 'DM Sans';
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px; /* 141.176% */
+            letter-spacing: -0.34px;
+            margin-bottom: 10px;
+          "
+        >
+          Assign roles and send invitation via email
+        </p>
+      </div>
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          padding-top: 20px;
+          padding-bottom: 40px;
+        "
+      >
+        <div>
+          <p
+            style="
+              color: #1c1c1c;
+
+              /* Texi */
+              font-family: Nunito;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              letter-spacing: 0.54px;
+              margin-bottom: 5px;
+            "
+          >
+            Full Name
+          </p>
+          <input
+            placeholder="Enter full name"
+            style="
+              display: flex;
+              height: 50px;
+              padding: 11.131px 17.124px;
+              justify-content: space-between;
+              align-items: center;
+              align-content: center;
+              row-gap: 8.562px;
+              align-self: stretch;
+              flex-wrap: wrap;
+              border-radius: 9.418px;
+              border: 0.856px solid #d9d9d9;
+              width: 350px;
+            "
+          />
+        </div>
+
+        <div>
+          <p
+            style="
+              color: #1c1c1c;
+
+              /* Texi */
+              font-family: Nunito;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              letter-spacing: 0.54px;
+              margin-bottom: 5px;
+            "
+          >
+            Email Address
+          </p>
+          <input
+            placeholder="Enter Email Address"
+            style="
+              display: flex;
+              height: 50px;
+              padding: 11.131px 17.124px;
+              justify-content: space-between;
+              align-items: center;
+              align-content: center;
+              row-gap: 8.562px;
+              align-self: stretch;
+              flex-wrap: wrap;
+              border-radius: 9.418px;
+              border: 0.856px solid #d9d9d9;
+              width: 350px;
+            "
+          />
+        </div>
+
+        <div>
+          <p
+            style="
+              color: #1c1c1c;
+
+              /* Texi */
+              font-family: Nunito;
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: normal;
+              letter-spacing: 0.54px;
+              margin-bottom: 5px;
+            "
+          >
+            Role Assignment
+          </p>
+          <select
+            placeholder="Enter full name"
+            style="
+              display: flex;
+              height: 50px;
+              padding: 11.131px 17.124px;
+              justify-content: space-between;
+              align-items: center;
+              align-content: center;
+              row-gap: 8.562px;
+              align-self: stretch;
+              flex-wrap: wrap;
+              border-radius: 9.418px;
+              border: 0.856px solid #d9d9d9;
+              width: 350px;
+              background: white;
+            "
+          ></select>
+        </div>
+      </div>
+
+      <div style="display: flex; gap: 10px; justify-content: space-between">
+        <button
+          style="
+            color: #737791;
+
+            /* Texi */
+            font-family: Nunito;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: 0.54px;
+            padding: 10px 25px;
+            background: none;
+            border: 0;
+          "
+          (click)="showAddUserModal = false"
+        >
+          Cancel
+        </button>
+        <button
+          style="
+            display: flex;
+            height: 52px;
+            padding: 10px 25px;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            border-radius: 8px;
+            background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+            box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.2);
+
+            color: #fff;
+
+            /* Texi */
+            font-family: Nunito;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: 0.54px;
+            border: 0;
+          "
+        >
+          <svg
+            width="30"
+            height="30"
+            viewBox="0 0 30 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M8.75 3.4375C6.73129 3.4375 4.90581 3.94204 3.58082 5.17237C2.24327 6.4144 1.5625 8.25881 1.5625 10.625V19.375C1.5625 21.7412 2.24327 23.5856 3.58082 24.8276C4.90581 26.058 6.73129 26.5625 8.75 26.5625H21.25C23.2687 26.5625 25.0942 26.058 26.4191 24.8276C27.7567 23.5856 28.4375 21.7412 28.4375 19.375V10.625C28.4375 8.25881 27.7567 6.4144 26.4191 5.17237C25.0942 3.94204 23.2687 3.4375 21.25 3.4375H8.75ZM24.0356 10.4529C24.4452 10.1363 24.5207 9.54752 24.2041 9.13782C23.8876 8.72811 23.2989 8.65262 22.8891 8.96921L15.9552 14.327C15.3926 14.7619 14.6072 14.7619 14.0445 14.327L7.11075 8.96921C6.70104 8.65262 6.11227 8.72811 5.79569 9.13782C5.4791 9.54752 5.55459 10.1363 5.9643 10.4529L12.8981 15.8107C14.1361 16.7672 15.8637 16.7672 17.1017 15.8107L24.0356 10.4529Z"
+              fill="white"
+            />
+          </svg>
+          Send Invite
+        </button>
+      </div>
+    </div>
+  </app-modal>
   <app-modal *ngIf="showBookingModal">
     <div style="background: white; padding: 10px; border: 5px">
       <p style="font-weight: 600">Add time in seconds</p>
@@ -49,7 +266,7 @@
       [class.active]="item.name === currentTab?.name"
     >
       <img [src]="item.icon" style="width: 20px; height: 20px" alt="" />
-      <span style="font-size: 10px">{{ item.name }}</span>
+      <span style="font-size: 10px; white-space: nowrap">{{ item.name }}</span>
     </div>
   </div>
   <div class="right">
@@ -59,8 +276,8 @@
 
     <!-- smsm settings -->
     <ng-container *ngIf="currentTab.name === 'SMS Settings'">
-      <div class="h">Outgoing WhatsApp settings</div>
-      <div class="toggles">
+      <div *ngIf="haveWabaDevice" class="h">Outgoing WhatsApp settings</div>
+      <div *ngIf="haveWabaDevice" class="toggles">
         <div
           *ngFor="let toggle of toggles; let i = index"
           class="toggle"
@@ -523,7 +740,7 @@
                 letter-spacing: -0.28px;
               "
             >
-              Enabling the toggle will block the SMS messages.
+              Activate toggle to send SMS for this message type
             </div>
           </div>
           <span>{{ toggle.label }}</span>
@@ -540,7 +757,7 @@
         </div>
       </div>
 
-      <div class="h">SMS App/Gateway Configuration</div>
+      <!-- <div class="h">SMS App/Gateway Configuration</div>
       <div class="credentials_tabs">
         <label>
           <input type="radio" name="tab" id="tab" />
@@ -560,7 +777,7 @@
           <label for="">App Key</label>
           <input type="text" readonly disabled value="https://api.accabi.com" />
         </div>
-      </div>
+      </div> -->
     </ng-container>
 
     <!-- profile Settings -->
@@ -737,6 +954,139 @@
           , these limits are gradually reduced to mitigate that risk.
         </p>
       </div> -->
+    </ng-container>
+
+    <ng-container *ngIf="currentTab.name === 'Role Management'">
+      <div
+        style="
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          margin-bottom: 10px;
+        "
+      >
+        <h4
+          style="
+            color: #000;
+            font-family: 'DM Sans';
+            font-size: 28px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 42px; /* 123.529% */
+            letter-spacing: -0.68px;
+          "
+        >
+          Role management
+        </h4>
+        <button
+          style="
+            display: flex;
+            height: 52px;
+            padding: 10px 15px;
+            align-items: center;
+            gap: 10px;
+
+            border-radius: 8px;
+            background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
+            box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+            color: white;
+            border: none;
+          "
+          (click)="showAddUserModal = true"
+        >
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M0.689941 1.22273L1.56767 0.345001H8.58949L9.46721 1.22273V8.24455L8.58949 9.12227H1.56767L0.689941 8.24455V1.22273ZM2.4454 2.10046V7.36682H7.71176V2.10046H2.4454ZM12.1004 0.345001L11.2227 1.22273V8.24455L12.1004 9.12227H19.1222L19.9999 8.24455V1.22273L19.1222 0.345001H12.1004ZM12.9781 7.36682V2.10046H18.2445V7.36682H12.9781ZM16.489 19.655H14.7336V16.1441H11.2227V14.3886H14.7336V10.8777H16.489V14.3886H19.9999V16.1441H16.489V19.655ZM1.56767 10.8777L0.689941 11.7555V18.7773L1.56767 19.655H8.58949L9.46721 18.7773V11.7555L8.58949 10.8777H1.56767ZM2.4454 17.8995V12.6332H7.71176V17.8995H2.4454Z"
+              fill="white"
+            />
+          </svg>
+          Add New
+        </button>
+      </div>
+
+      <div style="display: flex; gap: 25px; height: 70vh">
+        <div
+          style="
+            height: 100%;
+            width: 70%;
+            box-shadow: 0 0 10px lightgray;
+            padding: 15px;
+            border-radius: 12px;
+          "
+          class="role-management-table"
+        >
+          <div
+            class="role-head"
+            style="
+              background: rgba(46, 188, 150, 0.05);
+              display: flex;
+              justify-content: space-around;
+              box-shadow: 0 0 10px lightgray;
+            "
+          >
+            <div></div>
+            <div>User Name</div>
+            <div>Role</div>
+            <div>Last Active</div>
+            <div>Action</div>
+          </div>
+        </div>
+        <div
+          style="
+            height: 100%;
+            width: 30%;
+            box-shadow: 0 0 10px lightgray;
+            padding: 10px;
+            border-radius: 12px;
+            background: rgba(46, 188, 150, 0.05);
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+          "
+        >
+          <div>
+            <img style="width: 80px" src="../../../assets/role-user.png" />
+          </div>
+          <h4
+            style="
+              color: #000;
+              font-family: 'DM Sans';
+              font-size: 22px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 42px; /* 123.529% */
+              letter-spacing: -0.68px;
+            "
+          >
+            Select a user
+          </h4>
+          <p
+            style="
+              color: #707eae;
+              text-align: center;
+              font-family: 'DM Sans';
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 24px; /* 171.429% */
+              letter-spacing: -0.28px;
+            "
+          >
+            Choose a usar from the table to manage their rola and permissions
+          </p>
+        </div>
+      </div>
     </ng-container>
   </div>
 </div>
