--- a/src/app/screens/bookings/bookings.component.css
+++ b/src/app/screens/bookings/bookings.component.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
+  border-radius: 18px;
+  padding: 0 10px;
 }
 
 .header {
@@ -98,10 +101,10 @@
 .table {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 4px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+
   max-width: 1554px;
   width: 100%;
   min-width: fit-content;
